# sppark

./: .gitignore
.github/workflows/workflows/: repo-sync.yml
msm/: pippenger.cuh  sort.cuh
poc/msm-cuda/benches/: msm.rs
poc/msm-cuda/cuda/: pippenger.cu  pippenger_inf.cu
poc/msm-cuda/src/: lib.rs
poc/msm-cuda/tests/: msm.rs
poc/spmvm-cuda/: Cargo.toml  build.rs
poc/spmvm-cuda/benches/: spmvm.rs
poc/spmvm-cuda/cuda/: pallas.cu  spmvm.cu  vesta.cu
poc/spmvm-cuda/examples/: abomonated_msm.rs  abomonated_spmvm.rs  spmvm.rs
poc/spmvm-cuda/src/: lib.rs  util.rs  utils.rs
poc/spmvm-cuda/src/spmvm/: mod.rs  pallas.rs  vesta.rs
rust/: build.rs
spmvm/: double.cuh  spmvm.cuh
